src/tests/cases/snapshots/diskonaut__tests__cases__ui__medium_width-2.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[1]"
---
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
               ┌─────────────────────────────┐              
               │                             │              
               │                             │              
               │        Really quit?         │              
               │                             │              
               │                             │              
               │                             │              
               │                             │              
               │            (y/n)            │              
               │                             │              
               └─────────────────────────────┘              
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            

