src/tests/cases/snapshots/diskonaut__tests__cases__ui__minimum_tile_sides.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total: 1.1M (59 files), freed: 0 | /tmp/diskonaut_tests/minimum_tile_sides                                                                                                                   
┌───────────────────────────────────────────────────────────────────────────────────────┬────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                       │                                                                                                    │
│                                                                                       │                                                                                                    │
│                                                                                       │                                                                                                    │
│                                                                                       │                                             big_file4                                              │
│                                       big_file0                                       │                                                                                                    │
│                                                                                       │                                            132.0K (12%)                                            │
│                                     132.0K (12%)                                      │                                                                                                    │
│                                                                                       │                                                                                                    │
│                                                                                       │                                                                                                    │
│                                                                                       ├──────────────────────────────────────────────────────┬──────────────────┬─────────────────┬────────┤
│                                                                                       │                                                      │   medium_file0   │  medium_file1   │ file0  │
├───────────────────────────────────────────────────────────────────────────────────────┤                                                      │    8.0K (1%)     │    8.0K (1%)    │  4.0K  │
│                                                                                       │                                                      ├────────┬─────────┼────────┬────────┼────────┤
│                                                                                       │                                                      │ file1  │ file10  │ file11 │ file12 │ file13 │
│                                                                                       │                                                      │        │         │        │        │        │
│                                       big_file1                                       │                                                      │  4.0K  │  4.0K   │  4.0K  │  4.0K  │  4.0K  │
│                                                                                       │                                                      ├────────┼─────────┼────────┼────────┼────────┤
│                                                                                       │                      big_file5                       │ file14 │ file15  │ file16 │ file17 │ file18 │
│                                     132.0K (12%)                                      │                                                      │  4.0K  │  4.0K   │  4.0K  │  4.0K  │  4.0K  │
│                                                                                       │                     132.0K (12%)                     ├────────┼─────────┼────────┼────────┼────────┤
│                                                                                       │                                                      │ file19 │  file2  │ file20 │ file21 │ file22 │
│                                                                                       │                                                      │  4.0K  │  4.0K   │  4.0K  │  4.0K  │  4.0K  │
├───────────────────────────────────────────────────────────────────────────────────────┤                                                      ├────────┼─────────┼────────┼────────┼────────┤
│                                                                                       │                                                      │ file23 │ file24  │ file25 │ file26 │ file27 │
│                                                                                       │                                                      │        │         │        │        │        │
│                                                                                       │                                                      │  4.0K  │  4.0K   │  4.0K  │  4.0K  │  4.0K  │
│                                                                                       │                                                      ├────────┼─────────┼────────┼────────┼────────┤
│                                       big_file2                                       ├──────────────────────────────────────────────────────┤ file28 │ file29  │ file3  │ file30 │ file31 │
│                                                                                       │                                                      │  4.0K  │  4.0K   │  4.0K  │  4.0K  │  4.0K  │
│                                     132.0K (12%)                                      │                                                      ├────────┴┬────────┼────────┼────────┼────────┤
│                                                                                       │                                                      │ file32  │ file37 │ file38 │ file39 │ file4  │
│                                                                                       │                                                      │  4.0K   │  4.0K  │  4.0K  │  4.0K  │  4.0K  │
│                                                                                       │                                                      ├─────────┼────────┼────────┼────────┼────────┤
│                                                                                       │                                                      │ file33  │ file40 │ file44 │ file45 │ file46 │
├───────────────────────────────────────────────────────────────────────────────────────┤                                                      │  4.0K   │        │        │        │        │
│                                                                                       │                      big_file6                       ├─────────┤  4.0K  │  4.0K  │  4.0K  │  4.0K  │
│                                                                                       │                                                      │ file34  ├────────┼────────┴┬───────┴┬───────┤
│                                                                                       │                     132.0K (12%)                     │         │ file41 │ file47  │ file5  │ file6 │
│                                       big_file3                                       │                                                      │  4.0K   │  4.0K  │  4.0K   │  4.0K  │ 4.0K  │
│                                                                                       │                                                      ├─────────┼────────┼─────────┼────────┴───────┤
│                                                                                       │                                                      │ file35  │ file42 │ file48  │xxxxxxxxxxxxxxxx│
│                                     132.0K (12%)                                      │                                                      │  4.0K   │  4.0K  │  4.0K   │xxxxxxxxxxxxxxxx│
│                                                                                       │                                                      ├─────────┼────────┼─────────┤xxxxxxxxxxxxxxxx│
│                                                                                       │                                                      │ file36  │ file43 │ file49  │xxxxxxxxxxxxxxxx│
│                                                                                       │                                                      │  4.0K   │  4.0K  │  4.0K   │xxxxxxxxxxxxxxxx│
└───────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────────────┴─────────┴────────┴─────────┴────────────────┘
                                                                                                                                                                            (x = Small files) 
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <DELETE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit                                                            

